--- a/application.yml
+++ b/application.yml
@@ -8,6 +8,11 @@ test:
   task_server_port: 3000
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
+staging:
+  task_server_host: fixme
+  task_server_port: 80
+  auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
+  callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
 production:
   task_server_host: sync.towncenter.com
   task_server_port: 80
