--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ test:
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
 staging:
-  task_server_host: fixme
+  task_server_host: staging.netversa.com
   task_server_port: 80
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
