added support for https callbacks

--- a/application.yml
+++ b/application.yml
@@ -4,8 +4,8 @@ development:
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
 test:
-  task_server_host: localhost
-  task_server_port: 3000
+  task_server_host: sync.towncenter.com
+  task_server_port: 443
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
 staging:
@@ -15,6 +15,6 @@ staging:
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
 production:
   task_server_host: sync.towncenter.com
-  task_server_port: 80
+  task_server_port: 443
   auth_token: 13fc9e78f643ab9a2e11a4521479fdfe
   callback_auth_token: 892457gh9q87fah98ef7hq987harhq9w87eh8
